--- a/templates/home.html
+++ b/templates/home.html
@@ -30,9 +30,9 @@
             <img src="/static/images/banner.jpg" alt="baner">
             <div class="contenido">
                 <h2>Dr. Seuss.</h2>
-                <p>Cuando m&aacute;s lees,m&aacute;s cosas sabr&aacute;s</p>
-                <p>Cuantas m&aacute;s cosas aprendas, a m&aacute;</p>
-                <p>Lugares viajaras.</p>
+                <h5>Cuando m&aacute;s lees,m&aacute;s cosas sabr&aacute;s</h5>
+                <h5>Cuantas m&aacute;s cosas aprendas, a m&aacute;</h5>
+                <h5>Lugares viajaras.</h5>
                 <a href="https://www.lifeder.com/frases-de-lectura/" target="blank">Leer mas</a>
             </div>
         </section>
