--- a/static/css/fontello.css
+++ b/static/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?62070533');
-  src: url('../font/fontello.eot?62070533#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?62070533') format('woff2'),
-       url('../font/fontello.woff?62070533') format('woff'),
-       url('../font/fontello.ttf?62070533') format('truetype'),
-       url('../font/fontello.svg?62070533#fontello') format('svg');
+  src: url('../font/fontello.eot?82211228');
+  src: url('../font/fontello.eot?82211228#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?82211228') format('woff2'),
+       url('../font/fontello.woff?82211228') format('woff'),
+       url('../font/fontello.ttf?82211228') format('truetype'),
+       url('../font/fontello.svg?82211228#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?62070533#fontello') format('svg');
+    src: url('../font/fontello.svg?82211228#fontello') format('svg');
   }
 }
 */
@@ -56,6 +56,8 @@
 }
  
 .icon-menu:before { content: '\e800'; } /* '' */
+.icon-eye:before { content: '\e801'; } /* '' */
+.icon-eye-off:before { content: '\e802'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
 .icon-facebook-official:before { content: '\f230'; } /* '' */
