--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,97 +1,99 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 @import url(menu.css);
 @import url(banner.css);
 @import url(blog.css);
+@import url(form.css);
+@import url(about.css);
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family: 'Open Sans',sans-serif;
+body {
+  font-family: "Open Sans", sans-serif;
 }
 
-header{
-    width: 100%;
-    height: 80px;
-    background-color: #333;
-    color: #ffffff;
+header {
+  width: 100%;
+  height: 80px;
+  background-color: #333;
+  color: #ffffff;
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 
-.contenedor{
-    width: 98%;
-    margin: auto;
+.contenedor {
+  width: 98%;
+  margin: auto;
 }
 
-.icon{
-    width: 40px;
-    height: 45px;
-    margin-top: 12px;
-    float: left;
+.icon {
+  width: 40px;
+  height: 45px;
+  margin-top: 12px;
+  float: left;
 }
 
-header .contenedor{
-    display: table;
+header .contenedor {
+  display: table;
 }
 
-section{
-    width: 100%;
-    margin-bottom: 25px;
+section {
+  width: 100%;
+  margin-bottom: 25px;
 }
 
-#bienvenidos{
-    text-align: center;
+#bienvenidos {
+  text-align: center;
 }
-footer .contend-footer{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-bottom: 25px;
-}
-
-.copy{
-    font-size: 20px;
+footer .contend-footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-bottom: 25px;
 }
 
-.sociales{
-    width: 100%;
-    text-align: center;
-    font-size: 28px;
+.copy {
+  font-size: 20px;
 }
 
-.sociales a{
-    color: #333;
-    text-decoration: none;
+.sociales {
+  width: 100%;
+  text-align: center;
+  font-size: 28px;
 }
 
-@media(min-width:768px){
-    .sociales{
-        width: auto;
-        margin-right: 15px;
-    }
-    footer .contend-footer{
-        justify-content: space-between;
-    }
-
-    .copy{
-        margin-left: 15px;
-    }
+.sociales a {
+  color: #333;
+  text-decoration: none;
 }
 
-@media(min-width:1024px){
-    .contenedor{
-        width: 1000px;
-    }
+@media (min-width: 768px) {
+  .sociales {
+    width: auto;
+    margin-right: 15px;
+  }
+  footer .contend-footer {
+    justify-content: space-between;
+  }
 
-    .sociales{
-        width: auto;
-        margin-right: -335px;
-    }
+  .copy {
+    margin-left: 15px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .contenedor {
+    width: 1000px;
+  }
+
+  .sociales {
+    width: auto;
+    margin-right: -335px;
+  }
 }
