Se han añadido las interfaces de inicio de sesión,registro y acerca de. Todas las interfaces son adaptables a distintos tamaños de pantalla

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/fontello.css">
     <link rel="shortcut icon" href="/static/images/logo.png" type="image/x-icon">
-    <title>home</title>
+    <title>Acerca de Liber</title>
 </head>
 
 <body>
@@ -28,41 +28,24 @@
     </header>
 
     <main>
-        <section id="banner">
-            <img src="/static/images/banner.jpg" alt="baner">
-            <div class="contenido">
-                <h2>Dr. Seuss.</h2>
-                <h5>Cuando m&aacute;s lees,m&aacute;s cosas sabr&aacute;s</h5>
-                <h5>Cuantas m&aacute;s cosas aprendas, a m&aacute;</h5>
-                <h5>Lugares viajaras.</h5>
-                <a href="https://www.lifeder.com/frases-de-lectura/" target="blank">Leer mas</a>
-            </div>
+        <section id="banner-img">
+            <img src="/static/images/about.jpg" alt="baner">
         </section>
 
-        <section id="bienvenidos">
-            <h2>Te damos la bienvenida</h2>
-            <p>
-                Liber, tu biblioteca personal organizada
-                y accesible desde cualquier lugar
-            </p>
-        </section>
-
-        <section id="blog">
-            <h3>Lo &uacute;ltimo de nuestro blog</h3>
-            <div class="articulos">
-                <article>
-                    <img src="/static/images/a1.jpg" alt="imagen">
-                    <h4>Libros y caf&eacute;</h4>
-                </article>
-                <article>
-                    <img src="/static/images/a2.jpg" alt="imagen">
-                    <h4>Libros para se feliz</h4>
-                </article>
-                <article>
-                    <img src="/static/images/a3.jpg" alt="imagen">
-                    <h4>Libros y tecnlog&iacute;a</h4>
-                </article>
-            </div>
+        <section id="about">
+            <h2>Acerca de Liber</h2>
+            <article>
+                <p>
+                    Liber es una herramienta web capaz de
+                    gestionar tu propia biblioteca personal
+                    de libros f&iacute;sicos.
+                </p><br>
+                <p>
+                    Con Liber adem&aacute;s de gestionar tu biblioteca,
+                    tambi&eacute;n podr&aacute;s descargar informaci&oacute;n
+                    adicional de tus libros de manera automatica.
+                </p>
+            </article>
         </section>
     </main>
 
