sea agrego la ruta a contacto

--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -23,7 +23,7 @@
                 <a href="/templates/sign_in.html">iniciar sesi&oacute;n</a>
                 <a href="/templates/sign_up.html">Registro</a>
                 <a href="/templates/about.html">Acerca de</a>
-                <a href="#">Contacto</a>
+                <a href="/templates/contact.html">Contacto</a>
             </nav>
         </div>
     </header>
