sea agrego la ruta a contacto

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -21,35 +21,33 @@
                 <a href="/templates/sign_in.html">iniciar sesi&oacute;n</a>
                 <a href="/templates/sign_up.html">Registro</a>
                 <a href="/templates/about.html">Acerca de</a>
-                <a href="#">Contacto</a>
+                <a href="/templates/contact.html">Contacto</a>
             </nav>
         </div>
     </header>
-    <section id="formulario">
-        <form action="#" method="post">
-            <h1>Registro</h1>
-            <input type="text" placeholder="&#128100; Usuario"><br>
-            <input type="email" placeholder="&#128231; correo"><br>
-            <input type="password" id="password" placeholder="&#128273; Contraseña">
-            <label for="show-hide" class="icon-eye" 
-            id="eye" onclick="showHide();"></label>
-            <br>
-            <input type="submit" value="Registrarme">
-        </form>
-    </section>
-</main>
-
-<footer>
-    <div class="contend-footer">
-        <p class="copy">Liber &copy; 2020</p>
-        <div class="sociales">
-            <a class="icon-facebook-official" 
-            href="https://www.facebook.com/AxlEstevezN"
-            target="blank"></a>
-            <a class="icon-instagram" href="#"></a>
-            <a class="icon-twitter" href="#"></a>
+    <main>
+        <section id="formulario">
+            <form action="#" method="post">
+                <h1>Registro</h1>
+                <input type="text" placeholder="&#128100; Usuario"><br>
+                <input type="email" placeholder="&#128231; correo"><br>
+                <input type="password" id="password" placeholder="&#128273; Contraseña">
+                <label for="show-hide" class="icon-eye" id="eye" onclick="showHide();"></label>
+                <br>
+                <input type="submit" value="Registrarme">
+            </form>
+        </section>
+    </main>
+    
+    <footer>
+        <div class="contend-footer">
+            <p class="copy">Liber &copy; 2020</p>
+            <div class="sociales">
+                <a class="icon-facebook-official" href="https://www.facebook.com/AxlEstevezN" target="blank"></a>
+                <a class="icon-instagram" href="#"></a>
+                <a class="icon-twitter" href="#"></a>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
