se cambiarón los enlaces dentro del menú del sitio web

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,11 +16,11 @@
             <label class="icon-menu" for="menu-bar"></label>
 
             <nav class="menu">
-                <a href="/templates/home.html">inicio</a>
-                <a href="/templates/sign_in.html">iniciar sesi&oacute;n</a>
-                <a href="/templates/sign_up.html">Registro</a>
-                <a href="/templates/about.html">Acerca de</a>
-                <a href="/templates/contact.html">Contacto</a>
+                <a href="/">inicio</a>
+                <a href="/login">iniciar sesi&oacute;n</a>
+                <a href="/signUp">Registro</a>
+                <a href="/about">Acerca de</a>
+                <a href="/contact">Contacto</a>
             </nav>
         </div>
     </header>
